# jaka_moveit

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/jakazu3_notebook/: Tracker.h  blocks_poses.h
devel/include/joint_motor/: Tracker.h  image_data.h
devel/lib/jakazu3_notebook/: blocks_poses_publisher  blocks_spawner
devel/lib/pkgconfig/: jaka_rviz.pc  jaka_zu3_moveit_config.pc  jaka_zu3_myurdf.pc  jaka_zu3_testurdf.pc  jakazu3_notebook.pc  joint_motor.pc
src/jaka_rviz/: CMakeLists.txt
src/jaka_rviz/config/: jaka_zu3_gazebo_control.yaml  jaka_zu3_trajectory_control.yaml
src/jaka_rviz/jaka_zu3_moveit_config/: .setup_assistant  package.xml
src/jaka_rviz/launch/: camera_gazebo.xacro  jaka_zu3_gazebo_control.launch  jaka_zu3_gazebo_controller.launch  jaka_zu3_gazebo_states.launch  jaka_zu3_rviz_control.launch  jaka_zu3_trajectory_controller.launch  jakazu3.launch  test01.launch
src/jaka_rviz/urdf/: gazebo_control.xacro  jaka.gazebo.xacro  jaka_transmisstion.xacro  jaka_zu3.urdf  jaka_zu3.urdf.xacro  materials.xacro  myjaka_zu3.urdf  myjaka_zu3.urdf.xacro
src/jaka_zu3_moveit_config/: .setup_assistant  package.xml
src/jaka_zu3_myurdf/: CMakeLists.txt  package.xml
src/jaka_zu3_testurdf/: CMakeLists.txt
src/jakazu3_notebook/: CMakeLists.txt  package.xml
src/jakazu3_notebook/include/: blocks_poses.h
src/jakazu3_notebook/scripts/: jakazu3_gripper.py  jakazu3_mp.py  jakazu3_vision.py  test.py  testmove2.py
src/jakazu3_notebook/src/: blocks_poses_publisher.cpp
src/joint_motor/: CMakeLists.txt  package.xml
(+151 files in other folders)
